--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -55,6 +55,7 @@ target_link_libraries(cli
   ${ZLIB_LIBRARIES}
   ${CMAKE_THREAD_LIBS_INIT}
   ${Boost_SYSTEM_LIBRARY}
+  ${Boost_REGEX_LIBRARY}
 )
 
 add_definitions( -D_UNICODE -DUNICODE -DLOCKEDQUEUE_H -D_DATABASEWORKERPOOL_H -D_WORLDDATABASE_H -DDATABASEENV_H -D_MUTEX_ -DTRANSPORTMGR_H)
